--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ apply plugin: 'info.gianlucacosta.aurora'
 
 group = 'info.gianlucacosta.aurora'
 archivesBaseName = 'aurora'
-version = '3.1'
+version = '4.0-SNAPSHOT'
 
 
 description = 'Elegant Gradle projects for the JVM'
