--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
         classpath 'info.gianlucacosta.moonlicense:moonlicense-gradle:4.0'
-        classpath 'info.gianlucacosta.aurora:aurora:4.0'
+        classpath 'info.gianlucacosta.aurora:aurora:4.4'
     }
 }
 
@@ -43,13 +43,15 @@ apply plugin: 'info.gianlucacosta.aurora'
 
 group = 'info.gianlucacosta.aurora'
 archivesBaseName = 'aurora'
-version = '4.4'
+version = '5.0-SNAPSHOT'
 
 
 description = 'Elegant Gradle projects for the JVM'
 
 
 aurora {
+    release = false
+
     gitHubUser = 'giancosta86'
 
     author {
