--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
         classpath 'info.gianlucacosta.moonlicense:moonlicense-gradle:4.1'
-        classpath 'info.gianlucacosta.aurora:aurora:5.0'
+        classpath 'info.gianlucacosta.aurora:aurora:5.6'
     }
 }
 
@@ -43,7 +43,7 @@ apply plugin: 'info.gianlucacosta.aurora'
 
 group = 'info.gianlucacosta.aurora'
 archivesBaseName = 'aurora'
-version = '5.6'
+version = '5.7'
 
 
 description = 'Elegant Gradle projects for the JVM'
@@ -92,6 +92,12 @@ aurora {
 
         licenses = ['Apache-2.0']
 
-        labels = ['elegant', 'projects', 'Gradle', 'GitHub', 'Bintray']
+        labels = [
+                'elegant',
+                'projects',
+                'Gradle',
+                'GitHub',
+                'Bintray'
+        ]
     }
 }
