Remove Bintray references from build script

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ buildscript {
 
     /*
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'info.gianlucacosta.moonlicense:moonlicense-gradle:4.3'
         classpath 'info.gianlucacosta.aurora:aurora:8.0'
     }*/
@@ -17,7 +16,7 @@ buildscript {
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
-/*apply plugin: 'com.jfrog.bintray'
+/*
 apply plugin: 'info.gianlucacosta.moonlicense'
 apply plugin: 'info.gianlucacosta.aurora'
 */
@@ -29,7 +28,7 @@ version = '10.0.0-SNAPSHOT'
 description = 'Elegant Gradle projects for the JVM'
 
 repositories {
-    mavenCentral() // Define repositories for project dependencies here
+    mavenCentral()
 }
 
 dependencies {
@@ -45,7 +44,6 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
-//testRuntime 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
 //testRuntime 'info.gianlucacosta.moonlicense:moonlicense-gradle:4.3'
 }
 
@@ -70,20 +68,6 @@ aurora {
     author {
         name = 'Gianluca Costa'
         email = 'gianluca@gianlucacosta.info'
-    }
-
-    bintray {
-        repo = "Hephaestus"
-
-        licenses = ['Apache-2.0']
-
-        labels = [
-                'elegant',
-                'projects',
-                'Gradle',
-                'GitHub',
-                'Bintray'
-        ]
     }
 }
 */
